<resources>
    <string name="app_name">Random App Picker</string>
    <string name="app_version">1.1</string>

    <string name="settings">Settings</string>
    <string name="choose_apps">Choose Apps…</string>
    <string name="opening_random_app">Opening a random app</string>
    <string name="choose_apps_message">Choose which apps should be opened when the widget is pressed. Then go back to your home-screen and add the widget. That\'s all! :)</string>
    <string name="you_havent_chosen_any_apps">You haven\'t chosen any apps to open. Open \'Random App Picker\' to choose.</string>
    <string name="un_select_all">Un-select all</string>
    <string name="select_all">Select All</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="developers">Developer</string>
    <string name="changelog">Changelog</string>
    <string name="rate_the_app">Rate and Review</string>
    <string name="source">Source code</string>
    <string name="open_source_license">Open Source License</string>
    <string name="whats_new">What\'s New</string>
    <string name="okay">Okay</string>
    <string name="github_link">https://github.com/sds100/RandomAppPicker</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=io.github.sdsstudios.randomapppicker</string>
    <string name="developer_email">seth.d.schroeder@gmail.com</string>
    <string name="developer_name">sds100</string>
    <string name="github">Github</string>
    <string name="email">Email</string>
    <string name="developer_github">https://github.com/sds100</string>

</resources>
