<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Preference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:summary="@string/app_version"
        android:title="@string/version" />

    <Preference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="prefDevelopers"
        android:title="@string/developers" />

    <Preference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="prefChangelog"
        android:title="@string/changelog" />

    <Preference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="prefRateAndReview"
        android:title="@string/rate_the_app" />

    <Preference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="prefSource"
        android:title="@string/source" />

    <Preference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="prefLicense"
        android:title="@string/open_source_license" />

</PreferenceScreen>


